# DirectX

./: CMakeLists.txt  Generate_workspace.bat  Generate_workspace_64Bit.bat  README.md  directX_renderer.cxx  directX_renderer.h  test.h  todoList.txt  tutorial.txt
googleTest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googleTest/googletest/Debug/: gtest_maind.lib
googleTest/googletest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  gtest.lastbuildstate
googleTest/googletest/gtest_main.dir/Debug/gtest_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.read.1.tlog
renderer_dll/: CMakeLists.txt  directX_renderer.cxx  directX_renderer.h  dx11_interface_imp.cxx  dx11_interface_imp.h  dx_interface_imp.cxx  dx_interface_imp.h  dxgi_factory.cxx  dxgi_factory.h  render_interface.cxx  render_interface.h
runUnitTest/: CMakeLists.txt  DirectX11_1_test.cxx  test_project1.cpp
test_app/: CMakeLists.txt  test.cxx
utility/: release_helper.h
window_module/: window_module.cxx  window_module.h
